Add paid_content which requires permission granted by O'Reilly to access it
We want to authorize access to paid content hosted on a web site using
O'Reilly Media Manager, the system that currently tracks ownership of
intellectual property such as ebooks.

Demonstrate this with the members permissions by fetching the
appropriate permission and then parsing the RDF to ensure it is not
empty.

--- a/README.textile
+++ b/README.textile
@@ -9,12 +9,14 @@ h2. Basic Setup
 ** The instructions for "Using OmniAuth without other authentications" didn't work out for me, even if I changed the :to for "sign_in" to something else, so I redirected that path instead  (see config/routes.rb)
 ** Use the sample for auto-creating users listed under "Google" (see "Devise wiki":https://github.com/plataformatec/devise/wiki/OmniAuth:-Overview)
 ** Skip :verify_authenticity_token filter on OpenID callback to make the devise helper stored_location_for work (see app/controllers/users/omniauth_callbacks_controller.rb)
+** Add authorize_user! filter to check O'Reilly API for permissions
 
 h2. Implemented Features
 
 * User doesn't need to enter an OpenID URI; the SSO OpenID end-point is configured in config/initializers/devise.rb.
 * The user bypasses the sign_in form and proceeds directly to OpenID to login; SSO is the only available authentication mechanism so there is no need to offer choices on the sign_in page
-* SSO users who are new to the sample app will have a User record auto-created with the email address returned from OpenID attribute exchange
+* SSO users who are new to the sample app will have a User record auto-created with the email address and identity_url returned from OpenID attribute exchange
+* Access to content is restricted based on O'Reilly permissions API
 
 h2. Unimplemented Features
 
@@ -22,6 +24,7 @@ h2. Unimplemented Features
 * Cleanup fields related to password auth in the schema (left over from default Devise install)
 * Save first and last name with the user record
 * Configure the OpenID end-point URL on a per-environment basis
+* Timeouts and caching when accessing permissions API
 
 h2. Running in Your Environment
 
@@ -29,6 +32,8 @@ If you want to run this code in your environment, you'll need to pick an appropr
 
 If using O'Reilly Media's SSO, O'Reilly Media will need to authorize your app's domain to authenticate against the service.  If you see a "cancel" status from
 SSO or too many redirects during authentication, this is likely the cause.
+
+The O'Reilly permission API will not currently work outside O'Reilly's firewall.
 
 h2. Avoid devise_openid_authenticatable
 
