--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -47,8 +47,8 @@ en:
       unlocked: 'Your account was successfully unlocked. You are now signed in.'
       send_paranoid_instructions: 'If your account exists, you will receive an email with instructions about how to unlock it in a few minutes.'
     omniauth_callbacks:
-      success: 'Successfully authorized from %{kind} account.'
-      failure: 'Could not authorize you from %{kind} because "%{reason}".'
+      success: 'Successfully signed in from %{kind} account.'
+      failure: 'Could not sign you in from %{kind}: "%{reason}".'
     mailer:
       confirmation_instructions:
         subject: 'Confirmation instructions'
