--- a/README.textile
+++ b/README.textile
@@ -28,10 +28,18 @@ h2. Unimplemented Features
 
 h2. Running in Your Environment
 
+Adapt config.oreilly parameters in your config/environments/*.rb files.
+O'Reilly has some testing servers available for testing, but they are not all
+publicly accessible.
+
+h3. config.oreilly.openid_service_url
+
 If you want to run this code in your environment, you'll need to pick an appropriate OpenID end-point.  Most features don't require O'Reilly Media's SSO end-point; you can use any public provider for test purposes.
 
 If using O'Reilly Media's SSO, O'Reilly Media will need to authorize your app's domain to authenticate against the service.  If you see a "cancel" status from
 SSO or too many redirects during authentication, this is likely the cause.
+
+h3. config.oreilly.permissions_api_url
 
 The O'Reilly permission API will not currently work outside O'Reilly's firewall.
 
