--- a/README.textile
+++ b/README.textile
@@ -18,6 +18,7 @@ h2. Implemented Features
 * The user bypasses the sign_in form and proceeds directly to OpenID to login; SSO is the only available authentication mechanism so there is no need to offer choices on the sign_in page
 * SSO users who are new to the sample app will have a User record auto-created with the email address and identity_url returned from OpenID attribute exchange
 * During auth failure, redirect back to root_url instead of sign_in to avoid a redirect loop
+* Provide a specific error message when the app is not authorized by O'Reilly to use the OpenID service
 * Access to content is restricted based on O'Reilly permissions API
 
 h2. Unimplemented Features
