--- a/README.textile
+++ b/README.textile
@@ -39,8 +39,7 @@ h3. config.oreilly.openid_service_url
 
 If you want to run this code in your environment, you'll need to pick an appropriate OpenID end-point.  Most features don't require O'Reilly Media's SSO end-point; you can use any public provider for test purposes.
 
-If using O'Reilly Media's SSO, O'Reilly Media will need to authorize your app's domain to authenticate against the service.  If you see a "cancel" status from
-SSO or too many redirects during authentication, this is likely the cause.
+If using O'Reilly Media's SSO, O'Reilly Media will need to authorize your app's domain to authenticate against the service.  If you see a "cancel" status from SSO or too many redirects during authentication, this is likely the cause.
 
 h3. config.oreilly.permissions_api_url
 
